[package]
name = "blog_os"
version = "0.1.0"
authors = ["BarryYan <barry.yansh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
# panic = "abort"  # disable stack unwinding on panic

[profile.release]
# panic = "abort"  # disable stack unwinding on panic

[dependencies]

